# bookmark

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  SPEC.md  TODO.md  demo.sh  graph.html  test_all_modes.sh
docs/: IMPLEMENTATION_SUMMARY.md  LIBRARY_API.md  MCP_SERVER.md  TEST_RESULTS.md  index.html
examples/: README.md  knowledge-graph.sh  library_usage.rs  processing.sh  quick-start.sh  search-open.sh
src/: browser.rs  cli.rs  config.rs  deduplication.rs  exporter.rs  graph.rs  graph_output.rs  lib.rs  main.rs  mcp.rs  organization.rs  processor.rs  search.rs  utils.rs
src/deduplication/: mod.rs  tests.rs
src/exporter/: chrome.rs  firefox.rs  mod.rs  safari.rs
src/graph/: analyzer.rs  builder.rs  formats.rs  mod.rs  tests.rs
src/mcp/: mod.rs  tools.rs
src/organization/: mod.rs  rules.rs  tests.rs
tests/: integration_test.rs  mcp_test.rs
