[package]
name = "bookmark"
version = "0.1.1"
edition = "2024"
description = "Import, search, and open bookmarks from all browsers"
repository = "https://github.com/yingkitw/bookmark"
license = "Apache-2.0"
documentation = "https://docs.rs/bookmark"
homepage = "https://github.com/yingkitw/bookmark"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
plist = "1.7"
dirs = "5.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
open = "5.0"
dialoguer = "0.11"
url = "2.5"
regex = "1.10"
petgraph = "0.6"
quick-xml = "0.31"