[package]
name = "bookmark"
version = "0.1.2"
edition = "2024"
description = "Import, search, and open bookmarks from all browsers"
repository = "https://github.com/yingkitw/bookmark"
license = "Apache-2.0"
documentation = "https://docs.rs/bookmark"
homepage = "https://github.com/yingkitw/bookmark"

[lib]
name = "bookmark"
path = "src/lib.rs"

[[bin]]
name = "bookmark"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "bookmark-mcp"
path = "src/bin/bookmark-mcp.rs"
required-features = ["mcp"]

[features]
default = ["cli"]
cli = ["clap", "dialoguer", "open"]
mcp = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
plist = "1.7"
dirs = "5.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
url = "2.5"
regex = "1.10"
petgraph = "0.6"
quick-xml = "0.31"

clap = { version = "4.4", features = ["derive"], optional = true }
dialoguer = { version = "0.11", optional = true }
open = { version = "5.0", optional = true }

[dev-dependencies]
tempfile = "3.10"